2004-12-04  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkdialog.xml (set_alternative_button_order): Add.

	* pygtk-pangolayoutiter.xml Add.

	* pygtk-pangolayout.xml (get_iter) Add description of this PyGTK 2.6
	method.

	* pygtk-gtkcellview.xml (set_cell_data) Remove.

	* pygtk-gtkfilechooserbutton.xml (set_active, get_active, "active"):
	Remove.

2004-11-20  John Finlay  <finlay@moeraki.com>

	* pygtk_gtkdialog.xml (gtk.Dialog) Fix param list bug.

2004-11-18  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkliststore.xml (remove): Document return value differences.
	(Doug Quale)

2004-11-16  John Finlay  <finlay@moeraki.com>

	* pygtk2-ref.xml Set pubdate. Bump version number to 2.5.1

	* pygtk-gtkselectiondata.xml (gtk.target_list_add_image_targets)
	(gtk.target_list_add_text_targets)
	(gtk.target_list_add_uri_targets): Add descriptions.

	* pygtk-gtkaboutdialog.xml (gtk.about_dialog_set_email_hook)
	(gtk.about_dialog_set_url_hook): Add descriptions.

	* pygtk-gtk-functions.xml: Add new AboutDialog, CellView, Image
	and Window functions. Fix SelectionData and Settings functions.

	======== 2.5.0 ============
2004-11-15  John Finlay  <finlay@moeraki.com>

	* pygtk-introduction.xml Update.

	* pygtk2-ref.xml Set pubdate. Bump version number to 2.5.0

	* pygtk-gdkwindow.xml (set_focus_on_map)
	(enable_synchronized_configure, configure_finished): Add descriptions

	* pygtk-gdkdragcontext.xml (drag_drop_succeeded): Add description.

	* pygtk-gdkdisplay.xml (store_clipboard)
	(request_selection_notification, supports_clipboard_persistence
	(supports_selection_notification): Add descriptions.

	* pygtk-gtktreeselection.xml (get_selected_rows): Remove model
	arg - not needed. Fixes #158397 (Ken Harris)

	* pygtk-gtkwindow.xml (gtk.window_set_default_icon_name)
	(get_icon_name, set_icon_name, get_focus_on_map, set_focus_on_map):
	Add descriptions.

	* pygtk-gtktreeview.xml (set_row_separator_func)
	(set_hover_expand, get_hover_expand, set_hover_selection)