@@ -42,6 +42,14 @@ their own stock items in addition to those built-in to
 
     <variablelist>
       <varlistentry>
+	<term><literal>gtk.STOCK_ABOUT</literal></term>
+	<listitem>
+	  <simpara><imagedata fileref="icons/stock_about_24.png" format="png"/> Available in GTK+ 2.6 and above.</simpara>
+	</listitem>
+      </varlistentry>
+
+    <variablelist>
+      <varlistentry>
 	<term><literal>gtk.STOCK_ADD</literal></term>
 	<listitem>
 	  <simpara><imagedata fileref="icons/stock_add_24.png" format="png"/></simpara>
@@ -106,6 +114,13 @@ their own stock items in addition to those built-in to
       </varlistentry>
 
       <varlistentry>
+	<term><literal>gtk.STOCK_CONNECT</literal></term>
+	<listitem>
+	  <simpara><imagedata fileref="icons/stock_connect_24.png" format="png"/> Available in GTK+ 2.6 and above.</simpara>
+	</listitem>
+      </varlistentry>
+
+      <varlistentry>
 	<term><literal>gtk.STOCK_COPY</literal></term>
 	<listitem>
 	  <simpara><imagedata fileref="icons/stock_copy_24.png" format="png"/></simpara>
@@ -149,13 +164,6 @@ their own stock items in addition to those built-in to
       </varlistentry>
 
       <varlistentry>
-	<term><literal>gtk.STOCK_DIALOG_WARNING</literal></term>
-	<listitem>
-	  <simpara><imagedata fileref="icons/stock_dialog_warning_48.png" format="png"/></simpara>
-	</listitem>
-      </varlistentry>
-
-      <varlistentry>
 	<term><literal>gtk.STOCK_DIALOG_QUESTION</literal></term>
 	<listitem>
 	  <simpara><imagedata fileref="icons/stock_dialog_question_48.png" format="png"/></simpara>
@@ -166,6 +174,13 @@ their own stock items in addition to those built-in to
 	<term><literal>gtk.STOCK_DIALOG_WARNING</literal></term>
 	<listitem>
 	  <simpara><imagedata fileref="icons/stock_dialog_warning_48.png" format="png"/></simpara>
+	</listitem>
+      </varlistentry>
+
+      <varlistentry>
+	<term><literal>gtk.STOCK_DIALOG_DIRECTORY</literal></term>
+	<listitem>
+	  <simpara><imagedata fileref="icons/stock_dialog_directory_24.png" format="png"/> Available in GTK+ 2.6 and above.</simpara>
 	</listitem>
       </varlistentry>
 
@@ -184,9 +199,23 @@ their own stock items in addition to those built-in to
       </varlistentry>
 
       <varlistentry>
+	<term><literal>gtk.STOCK_EDIT</literal></term>
+	<listitem>
+	  <simpara><imagedata fileref="icons/stock_edit_24.png" format="png"/> Available in GTK+ 2.6 and above.</simpara>
+	</listitem>
+      </varlistentry>
+
+      <varlistentry>
 	<term><literal>gtk.STOCK_EXECUTE</literal></term>
 	<listitem>
 	  <simpara><imagedata fileref="icons/stock_exec_24.png" format="png"/></simpara>
+	</listitem>
+      </varlistentry>
+
+      <varlistentry>
+	<term><literal>gtk.STOCK_FILE</literal></term>
+	<listitem>
+	  <simpara><imagedata fileref="icons/stock_file_24.png" format="png"/> Available in GTK+ 2.6 and above.</simpara>
 	</listitem>
       </varlistentry>
 
@@ -345,6 +374,62 @@ their own stock items in addition to those built-in to
       </varlistentry>
 
       <varlistentry>
+	<term><literal>gtk.STOCK_MEDIA_FORWARD</literal></term>
+	<listitem>
+	  <simpara><imagedata fileref="icons/stock_media_forward_24.png" format="png"/> Available in GTK+ 2.6 and above.</simpara>
+	</listitem>
+      </varlistentry>
+
+      <varlistentry>
+	<term><literal>gtk.STOCK_MEDIA_NEXT</literal></term>
+	<listitem>
+	  <simpara><imagedata fileref="icons/stock_media_next_24.png" format="png"/> Available in GTK+ 2.6 and above.</simpara>
+	</listitem>
+      </varlistentry>
+
+      <varlistentry>
+	<term><literal>gtk.STOCK_MEDIA_PAUSE</literal></term>
+	<listitem>
+	  <simpara><imagedata fileref="icons/stock_media_pause_24.png" format="png"/> Available in GTK+ 2.6 and above.</simpara>
+	</listitem>
+      </varlistentry>
+
+      <varlistentry>
+	<term><literal>gtk.STOCK_MEDIA_PLAY</literal></term>
+	<listitem>
+	  <simpara><imagedata fileref="icons/stock_media_play_24.png" format="png"/> RTL version is <imagedata fileref="icons/stock_media_play_rtl_24.png" format="png"/> Available in GTK+ 2.6 and above.</simpara>
+	</listitem>
+      </varlistentry>
+
+      <varlistentry>
+	<term><literal>gtk.STOCK_MEDIA_PREVIOUS</literal></term>
+	<listitem>
+	  <simpara><imagedata fileref="icons/stock_media_previous_24.png" format="png"/> Available in GTK+ 2.6 and above.</simpara>
+	</listitem>
+      </varlistentry>
+
+      <varlistentry>
+	<term><literal>gtk.STOCK_MEDIA_RECORD</literal></term>
+	<listitem>
+	  <simpara><imagedata fileref="icons/stock_media_record_24.png" format="png"/> Available in GTK+ 2.6 and above.</simpara>
+	</listitem>
+      </varlistentry>
+
+      <varlistentry>
+	<term><literal>gtk.STOCK_MEDIA_REWIND</literal></term>
+	<listitem>
+	  <simpara><imagedata fileref="icons/stock_media_rewind_24.png" format="png"/> Available in GTK+ 2.6 and above.</simpara>
+	</listitem>
+      </varlistentry>
+
+      <varlistentry>
+	<term><literal>gtk.STOCK_MEDIA_STOP</literal></term>
+	<listitem>
+	  <simpara><imagedata fileref="icons/stock_media_stop_24.png" format="png"/> Available in GTK+ 2.6 and above.</simpara>
+	</listitem>
+      </varlistentry>
+
+      <varlistentry>
 	<term><literal>gtk.STOCK_MISSING_IMAGE</literal></term>
 	<listitem>
 	  <simpara><imagedata fileref="icons/stock_broken_image_24.png" format="png"/></simpara>
@@ -453,7 +538,7 @@ Available in GTK+ 2.4 and above.</simpara>
       <varlistentry>
 	<term><literal>gtk.STOCK_REVERT_TO_SAVED</literal></term>
 	<listitem>
-	  <simpara><imagedata fileref="icons/stock_revert_24.png" format="png"/></simpara>
+	  <simpara><imagedata fileref="icons/stock_revert_24.png" format="png"/> RTL version is <imagedata fileref="icons/stock_revert_rtl_24.png" format="png"/></simpara>
 	</listitem>
       </varlistentry>
 
@@ -523,7 +608,7 @@ Available in GTK+ 2.4 and above.</simpara>
       <varlistentry>
 	<term><literal>gtk.STOCK_UNDELETE</literal></term>
 	<listitem>
-	  <simpara><imagedata fileref="icons/stock_undelete_24.png" format="png"/></simpara>
+	  <simpara><imagedata fileref="icons/stock_undelete_24.png" format="png"/> RTL version is <imagedata fileref="icons/stock_undelete_rtl_24.png" format="png"/></simpara>
 	</listitem>
       </varlistentry>
 
