@@ -1,3 +1,9 @@
+2004-12-06  John Finlay  <finlay@moeraki.com>
+
+	* pygtk-gtk-stock-items.xml Remove duplicate STOCK_WARNING.
+	Fixes #160584 (Erik Grinaker).
+	Add GTK+ 2.6 stock icons.
+
 2004-12-04  John Finlay  <finlay@moeraki.com>
 
 	* pygtk-gtkdialog.xml (set_alternative_button_order): Add.
